tests/mut_newtype_enum_dup_ctor.test
type Bad = | A int | A str;
####
SyntaxError: Repeated variant constructor name.
type Bad = | A int | A str;
                     ^      
Note: Conflicts with previous definition here:
type Bad = | A int | A str;
             ^
